# StormFS-Linux

./: .bashrc  .gitignore  Cargo.toml  README.md  README.org  bootstrap.sh  bootstrap.sh.bak  profile
ports/: .dmrc  README.md  bootstrap.sh  config-6.7.5
ports/compat-32/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/compat-32/alsa-lib-32/: .footprint  Pkgfile
ports/compat-32/alsa-plugins-32/: .footprint  Pkgfile
ports/compat-32/at-spi2-core-32/: .footprint  Pkgfile
ports/compat-32/attr-32/: .footprint  Pkgfile
ports/compat-32/avahi-32/: .footprint  Pkgfile
ports/compat-32/brotli-32/: .footprint  Pkgfile
ports/compat-32/bzip2-32/: .footprint  Pkgfile
ports/compat-32/cairo-32/: .footprint  Pkgfile
ports/compat-32/cdparanoia-32/: .footprint  .md5sum
ports/compat-32/cups-32/: .footprint  Pkgfile
ports/compat-32/curl-32/: Pkgfile
ports/compat-32/db-32/: .footprint  Pkgfile
ports/compat-32/dbus-32/: .footprint  Pkgfile
ports/compiz/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/contrib/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/core/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/core/acl/: Pkgfile  (+2 more)
ports/gnome/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/lxqt/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/opt/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/plasma/: .httpup-repo.current  .httpup-urlinfo  REPO  options
ports/xfce/: .httpup-repo.current  .httpup-urlinfo  REPO
ports/xorg/: .httpup-repo.current  .httpup-urlinfo  REPO  update_xorg_urls.py
res/: AndroidManifest.xml
src/: main.rs
(+3517 files in other folders)
