[package]
name = "egui-miniquad-template"
version = "0.1.0"
authors = ["Jakob Meier <comcloudway@ccw.icu>"]
edition = "2021"

[dependencies]
miniquad = { version = "=0.3.0-alpha.43", features = ["log-impl"] }
egui = "0.16.1"
egui-miniquad = "0.8.0"

[dev-dependencies]
pretty_assertions = "0.6"

[profile.release]
opt-level = 2 # fast and small wasm

[target.'cfg(target_os = "android")'.dependencies]
#ndk      = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
#ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk = "*"
ndk-glue = "*"

[package.metadata]
target_sdk_version=29
icon = "ic_launcher"

android_build_targets = ["aarch64-linux-android"]
android_assets = "assets"
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_assets = "assets"
apple_res = "res/apple"

use_android_manifest = true
android_manifest_path = "res/AndroidManifest.xml"
 
[package.metadata.android]
apk_label = "Egui Miniquad Template"
target_sdk_version = 29
min_sdk_version = 23
